--- a/package.json
+++ b/package.json
@@ -9,10 +9,16 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.5.7",
+    "@react-navigation/stack": "^6.3.16",
+    "@types/react": "~18.0.27",
     "expo": "~48.0.5",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
-    "react-native": "0.71.3"
+    "react-native": "0.71.3",
+    "typescript": "^4.9.4",
+    "expo-contacts": "~12.0.1",
+    "@shopify/flash-list": "1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
